# panini-parser

./: .gitignore  README.md  pyproject.toml
arduino/: sender.ino
arduino/sender/: sender.ino
backend/: README.md  __init__.py  dependencies.py  download_data.py  main.py
backend/api/: __init__.py  routes.py
backend/controllers/: __init__.py  game_controller.py  rules_controller.py  word_controller.py
backend/dto/: __init__.py  game_dto.py  word_dto.py
backend/models/: __init__.py  game.py  word.py
backend/repositories/: interfaces.py  memory_repository.py
backend/services/: game_service.py  interfaces.py  word_service.py
cli/: README.md  __init__.py  main.py  vidyut_service.py  word_database.py
frontend/: .gitignore  API_EXPORT_GUIDE.md  API_GENERATION.md  API_INTEGRATION.md  README.md  generate-api.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/public/: index.html  intro.m4a  main.m4a
frontend/scripts/: export-openapi.sh
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/assets/: serial.ts
frontend/src/components/: AnswerFeedback.tsx  DifficultySelector.tsx  GameControls.tsx  GameEndEffects.tsx  HPChangeEffect.tsx  HPDisplay.tsx  HintsPanel.tsx  PlayArea.tsx  QuestionDisplay.tsx  RuleInputForm.tsx  ScoreDisplay.tsx  Timer.tsx
frontend/src/constants/: appConstants.tsx
frontend/src/contexts/: GameInputContext.tsx
frontend/src/hooks/: useGame.ts  useWebSerialMultiDevice.ts
frontend/src/mapper/: mapper.tsx
(+16 files in other folders)
