[project]
name = "panini-parser"
version = "0.1.0"
description = "A panini parse game for Sanskrit using Vidyut parser engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "vidyut>=0.4.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["cli*", "backend*"]
exclude = ["frontend*"]

[project.scripts]
panini-cli = "cli.main:app"
panini-backend = "backend.main:start_server"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
